--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.0"
   },
