--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@react-email/components": "^0.5.4",
+    "@react-email/render": "^1.3.1",
     "@shadcn/ui": "^0.0.4",
     "@supabase/supabase-js": "^2.56.0",
     "class-variance-authority": "^0.7.1",
@@ -19,8 +25,10 @@
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-email": "^4.2.11",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.1.2",
+    "resend": "^6.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.0"
   },
